--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap"
       rel="stylesheet"
     />
-    <title>StopGap</title>
+    <title>StopGap Ottawa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
